--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
-  "token": "bot-tokeniniz",
+  "token": "MTI4OTI3NjA5MDU5ODAzNTYwNw.Gbk__V.QFYoXd_Yf94aMPd6wVC4SpbYQVP_AaPd1Jnwq0
+",
   "prefix": "+",
-  "owners": ["kendi-idniz"],
+  "owners": ["1289259554030489666"],
   "statuses": [
     "Senle",
     "Kalbimle",
